--- a/everything.css
+++ b/everything.css
@@ -12,3 +12,6 @@ header{
     font-size: 50px;
     background:linear-gradient(45deg, blue, green, orange) ;
 }
+body{
+    background-color: blanchedalmond;
+}
