--- a/everything.css
+++ b/everything.css
@@ -13,5 +13,5 @@ header{
     background:linear-gradient(45deg, blue, green, orange) ;
 }
 body{
-    background-color: blanchedalmond;
+    background-color: white;
 }
